re: #3326 re: #3284 attachment tags and uuid in birt datasets
git-svn-id: https://subversion.assembla.com/svn/smart-cs/trunk@9265 37136b1e-4cb1-4992-8394-573b48a9bdce